crates/bsnext_input/src/snapshots/bsnext_input__route_cli__test__serve_dir.snap
---
source: crates/bsnext_input/src/route_cli.rs
expression: parsed
---
RouteCli {
    command: ServeDir {
        path: "/",
        dir: "examples/basic/public",
    },
}
